Update npm scripts and ci
Now that the GitHub image has been updated with the new version of
Chrome.

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -13,4 +13,4 @@ jobs:
     - name: Lint
       run: npm run lint
     - name: E2E tests
-      run: npm run pretest:github && npm test
+      run: npm test
